# pysheds

./: .gitattributes  .gitignore  .setup.py.un~  .travis.yml  CLAUDE.md  GOVERNANCE.md  README.md  pyproject.toml  requirements.txt  requirements_upstream.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
data/: dem.tif  dinf_eff.tif  dir.asc  eff.tif  roi.tif
docs/: _config.yml  accumulation.md  catchment.md  dem-conditioning.md  extract-river-network.md  file-io.md  flow-directions.md  flow-distance.md  hand.md  index.md  raster.md  views.md
docs/_data/: nav.yml
docs/_includes/: nav.html
docs/_layouts/: default.html
docs/assets/css/: style.css
examples/: burn_dem.ipynb  crs_conversion.ipynb  extract_river_network.ipynb  flowdir_vs_projection.ipynb  hand.ipynb  laplacian.ipynb  no_metadata.ipynb  performance.ipynb  quickstart.ipynb  rfsm.ipynb  routing_modes.ipynb  shapefiles.ipynb  snap_to_mask.ipynb  terrain.ipynb
pysheds/: .grid.py.un~  __init__.py  _priority_flood.py  _sgrid.py  _sview.py  grid.py  io.py  pgrid.py  projection.py  pview.py  rfsm.py  sgrid.py  sview.py  view.py
recipes/: accumulated_angle.ipynb  burn_dem.ipynb  messy_dem.ipynb  write_shapefile.ipynb
tests/: conftest.py  test_grid.py
tools/: rfsm.py  swmm.py
